# AliceO2

./: .cmake-format.py  CMakeLists.txt
Detectors/ITSMFT/ITS/tracking/: CMakeLists.txt
Detectors/ITSMFT/MFT/base/: CMakeLists.txt
Detectors/MUON/MID/: CMakeLists.txt
Detectors/MUON/MID/Base/: CMakeLists.txt
Detectors/MUON/MID/Clustering/: CMakeLists.txt
Detectors/MUON/MID/Simulation/: CMakeLists.txt
Detectors/MUON/MID/Simulation/test/: CMakeLists.txt
Detectors/MUON/MID/TestingSimTools/: CMakeLists.txt
Detectors/MUON/MID/Tracking/: CMakeLists.txt
Detectors/MUON/MID/Workflow/: CMakeLists.txt
Detectors/TRD/base/: CMakeLists.txt
Framework/: CMakeLists.txt
Framework/Core/: CMakeLists.txt
Framework/Core/include/Framework/: ChannelMatching.h  DeviceControl.h  DeviceInfo.h  DeviceSpec.h  FrameworkGUIDebugger.h  FrameworkGUIDevicesGraph.h
Framework/Core/src/: DDSConfigHelpers.cxx  DDSConfigHelpers.h  DeviceSpec.cxx.in  FrameworkGUIDebugger.cxx  FrameworkGUIDevicesGraph.cxx  runDataProcessing.cxx
Framework/TestWorkflows/src/: o2DiamondWorkflow.cxx
Framework/Utils/: CMakeLists.txt
GPU/TPCFastTransformation/: CMakeLists.txt
Generators/: CMakeLists.txt
cmake/: AddRootDictionary.cmake  O2AddHeaderOnlyLibrary.cmake  O2AddTestRootMacro.cmake  O2AddTestRootMacro.cmake.alt  O2AddTestWrapper.cmake  O2DefineOptions.cmake  O2Dependencies.cmake  O2TargetRootDictionary.cmake  O2Utils.cmake
cmake/modules/: CheckCXX14Features.cmake
dependencies/: CMakeLists.txt  FindFairRoot.cmake  FindROOT.cmake  FindRapidJSON.cmake  Findms_gsl.cmake  O2Dependencies.cmake  O2FindDependenciesFromAliBuild.cmake  O2RecipeAdapter.cmake
doc/: CMakeMigration.md
packaging/: CMakeLists.txt  O2Config.cmake
run/: CMakeLists.txt  O2SimDeviceRunner.cxx  o2sim_parallel_dds.sh  o2sim_parallel_tool.cxx
